Set html color to prevent from scrolling to white space

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,10 @@
   font-style: normal;
 }
 
+html {
+  background-color: $c_medium-purple;
+}
+
 * {
   color: $c_white;
   box-sizing: border-box;
